--- a/OneNightAtTriangeln.csproj
+++ b/OneNightAtTriangeln.csproj
@@ -7,4 +7,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Compile Remove="textfile.txt.cs" />
+    </ItemGroup>
+
 </Project>
